@@ -1,3 +1,8 @@
+Version CVS HEAD (?)
+
+  * src/DLS.cpp, src/DLS.h:
+    - added Sampler::AddSampleLoop() and Sampler::DeleteSampleLoop() methods
+
 Version 3.1.1 (24 Mar 2007)
 
   * packaging changes:
